--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color:white;
+    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(0,160,187,1) 0%, rgba(0,188,219,0.90) 90% );
   }
   
   h1, h2 {
@@ -28,8 +28,8 @@ body {
   
   .input-section button {
     padding: 5px 10px;
-    background-color: #d3205e;
-    color: white;
+    background-color: #000000;
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -37,6 +37,7 @@ body {
   
   .expenses-list {
     margin: 20px;
+    color: white;
   }
   
   table {
@@ -45,14 +46,14 @@ body {
   }
   
   th, td {
-    border: 1px solid #ddd;
+    border: 3px solid #ddd;
     padding: 8px;
     text-align: left;
   }
   
   th {
-    background-color:#f0e924;
-    color: rgb(0, 0, 0);
+    background-color:#000000;
+    color: rgb(255, 255, 255);
   }
   
   tfoot td {
